<resources>
    <string name="app_name">Modern trading</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="forgotYourPassword">Forgot your password?</string>
    <string name="dontHaveAnAccountYet">Don\'t have an account yet?</string>
    <string name="signUp">Sign up</string>
    <string name="nickname">Nickname</string>
    <string name="currentTrades">Current trades</string>
    <string name="returnToLastPage">Return to last page</string>
    <string name="scrollView">Scroll view</string>
    <string name="itemName">Item name</string>
    <string name="addImage">Add image</string>
    <string name="addVideo">Add video</string>
    <string name="uploadItem">Upload item</string>
    <string name="videoOfItem">Video of item</string>
    <string name="pictureOfItem">Picture of item</string>
    <string name="rateTheOtherTrader">Rate the other trader</string>
    <string name="leaveAReview">Leave a review</string>
    <string name="searchChats">Search chats</string>
    <string name="traderName">Trader name</string>
    <string name="changePasswordText">Change password</string>
    <string name="changePassword">Change password</string>
    <string name="passwordVerify">Password verify</string>
    <string name="newPassword">New password</string>
    <string name="newPasswordVerify">New password verify</string>
    <string name="searchItem">Search item</string>
    <string name="searchTraders">Search traders</string>
    <string name="editProfile">Edit profile</string>
    <string name="searchTrades">Search trades</string>
    <string name="message">Type a message here</string>
    <string name="sendMessage"><![CDATA[>]]></string>
    <string name="clicked">clicked</string>
    <string name="chatsPage">Chats page</string>
    <string name="logOut">log out</string>
    <string name="writeAReview">Write a review</string>
    <string name="downvote">downvote</string>
    <string name="upvote">upvote</string>
    <string name="searchItems">Search items</string>
    <string name="codeInput">Code input</string>
    <string name="currentPassword">Current password</string>
    <string name="Itemslist">Items list</string>
    <string name="Profile">Profile</string>
    <string name="TraderName">Trader name</string>
    <string name="TraderInfo">Trader info</string>
    <string name="BackButton">Back button</string>
    <string name="MapIcon">Map icon</string>
    <string name="EditProfile">Edit profile</string>
    <string name="TradeRadius">Trader Radius</string>
    <string name="ImageButton">Image button</string>
    <string name="TraderProfile">Trader profile</string>
    <string name="ItemPage">Item page</string>
    <string name="ItemName">Item name</string>
    <string name="sendCodeToEmailButton">Send code to email</string>
    <string name="SearchTraders">EarchTraders</string>
    <string name="SearchItem">SearchItem</string>
    <string name="search_traders">Search traders</string>
    <string name="pickLocationButton">pickLocationButton</string>
    <string name="profile">profile</string>
</resources>