<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@drawable/background"
    >


    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/BackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="RedundantDescriptionCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditProfile"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackButton"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/textInputEditText"
        android:layout_width="272dp"
        android:layout_height="65dp"
        android:layout_marginTop="27dp"
        android:hint="@string/TraderInfo"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText4"
        app:layout_constraintVertical_bias="0.156"
        android:autofillHints="" />

    <EditText
        android:id="@+id/textInputEditText4"
        android:layout_width="271dp"
        android:layout_height="60dp"
        android:layout_marginTop="31dp"
        android:autofillHints=""
        android:hint="@string/TraderName"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText6"
        app:layout_constraintVertical_bias="0.618" />

    <EditText
        android:id="@+id/textInputEditText6"
        android:layout_width="189dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/TradeRadius"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.075"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="85dp"
        android:layout_height="76dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/map_icon"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:contentDescription="@string/MapIcon" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="166dp"
        android:layout_height="149dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="133dp"
        android:contentDescription="@string/BackButton"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText6"
        app:layout_constraintVertical_bias="0.126"
        app:srcCompat="@drawable/ic_baseline_image_24"
        tools:ignore="RedundantDescriptionCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>