<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">


    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/BackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        tools:ignore="RedundantDescriptionCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="5sp"
        android:paddingEnd="0sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#1976D2"
        android:textColorHint="#1976D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpText" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5sp"
        android:paddingEnd="0sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#1976D2"
        android:textColorHint="#1976D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/nicknameInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:paddingStart="5sp"
        android:paddingEnd="0sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#1976D2"
        android:textColorHint="#1976D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordVerifyInput" />

    <EditText
        android:id="@+id/passwordVerifyInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/passwordVerify"
        android:inputType="textPassword"
        android:paddingStart="5sp"
        android:paddingEnd="0sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#1976D2"
        android:textColorHint="#1976D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:backgroundTint="#4581DA"
        android:text="@string/signUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknameInput"
        app:layout_constraintVertical_bias="0.282"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>